<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/navheader"
        android:scaleType="centerCrop"
        android:layout_gravity="top"
        android:layout_marginBottom="18dp"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/cardlayout"
            android:elevation="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datosPersonales"
                android:layout_gravity="start"/>
            <ImageView
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>
            <EditText
                android:drawableLeft="@drawable/info"
                android:id="@+id/etNombre"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/nombreSelec"
                android:textAlignment="center"
                android:layout_margin="15dp"/>


            <EditText
                android:drawableLeft="@drawable/info"
                android:id="@+id/etApellidos"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/apellidosRegis"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <EditText
                android:maxLength="2"
                android:hint="@string/selecEdad"
                android:inputType="number"
                android:drawableLeft="@drawable/info"
                android:id="@+id/etEdad"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
            <Spinner
                android:prompt="@string/selecGenero"
                android:drawableLeft="@drawable/info"
                android:id="@+id/spGenero"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/generoRegis"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
            <Spinner
                android:prompt="@string/SeleccionEstado"
                android:drawableLeft="@drawable/info"
                android:id="@+id/spEstado"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
            <EditText
                android:drawableLeft="@drawable/info"
                android:id="@+id/etMunicipio"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/municipioRegis"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
            <EditText
                android:maxLength="5"
                android:inputType="number"
                android:drawableLeft="@drawable/info"
                android:id="@+id/etCodigo"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/Codigo"
                android:textAlignment="center"
                android:layout_margin="5dp"/>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datosContacto"
                android:layout_gravity="start"/>

            <ImageView
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <Spinner
                android:prompt="@string/selecEscuela"
                android:drawableLeft="@drawable/info"
                android:id="@+id/spEscuela"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/EscuelaRegis"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
            <EditText
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/info"
                android:id="@+id/etCorreo"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/correoRegis"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <EditText
                android:drawableLeft="@drawable/info"
                android:id="@+id/etCorreoConfir"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/correoConfir"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <EditText
                android:inputType="textPassword"
                android:drawableLeft="@drawable/info"
                android:id="@+id/etPass"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/contraseña"
                android:textAlignment="center"
                android:layout_margin="5dp"/>
            <EditText
                android:inputType="textPassword"
                android:drawableLeft="@drawable/info"
                android:id="@+id/etPassConfir"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/oval"
                android:hint="@string/contraseñaConfirm"
                android:textAlignment="center"
                android:layout_margin="5dp"/>


            <Button
                android:id="@+id/btnRegistro"
                android:layout_marginTop="14dp"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/Registro"
                android:textColor="#ffffff"
                android:theme="@style/RaisedButtonLight"
                android:layout_gravity="center_horizontal"
                android:elevation="2dp"/>

        </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
</LinearLayout>