<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tallerCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    cardview:cardElevation="10dp"
    cardview:cardCornerRadius="30dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvTituloTaller"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taller"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageButton
                android:id="@+id/imbTaller"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_gravity="center_vertical"
                android:background="@color/cardview_light_background"
                android:scaleType="centerCrop"
                android:src="@drawable/bt_talleres"
                android:padding="2dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">


                <TextView
                    android:layout_gravity="center"
                    android:textSize="10sp"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tallerista"
                    android:gravity="center"/>


                <TextView
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/colorOscuroFormal"
                    android:id="@+id/tvImparteTaller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ImparteTaller1_dia1"
                    android:gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:textSize="10sp"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Lugar"
                    android:gravity="center"/>

                <TextView
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/colorOscuroFormal"
                    android:id="@+id/tvLugarTaller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AJBS"
                    android:gravity="center"/>

                <TextView
                    android:layout_gravity="center"
                    android:textSize="10sp"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Horario"
                    android:gravity="center"/>

                <TextView
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/colorOscuroFormal"
                    android:id="@+id/tvHoraTaller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HoraConferencia1_dia1"
                    android:gravity="center"/>

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:textSize="10sp"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cupo"/>

                <TextView
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/colorOscuroFormal"
                    android:id="@+id/tvCupoTaller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copoTaller"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>